# scaffold-base

./: scaffold-base.cabal
src/Scaffold/: Config.hs  DNSSD.hs  Main.hs  Prelude.hs  Register.hs  Types.hs  Util.hs
src/Scaffold/Drivers/: Fake.hs  POSIX.hs
